tests/snapshots/examples_fixtures/type_system__failing__146_constructor_pattern_arity_some_too_many.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/146_constructor_pattern_arity_some_too_many.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/type_system/failing/146_constructor_pattern_arity_some_too_many.flx:7:14
   |
 7 |     let _y = match x {
   |              ^^^^^^^^^
 8 |         BoxI(a, b) -> a,
   | ^^^^^^^^^^^^^^^^^^^^^^^^
 9 |         EmptyI -> 0,
   | ^^^^^^^^^^^^^^^^^^^^
10 |     }
   | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.


error[E085]: Constructor Pattern Arity Mismatch

Constructor pattern `BoxI` expects 1 argument(s) but got 2.

  examples/type_system/failing/146_constructor_pattern_arity_some_too_many.flx:8:9
  |
8 |         BoxI(a, b) -> a,
  |         ^^^^^^^^^^

Hint:
  Check the constructor's declared pattern field count.

Found 2 errors.
== stdout ==
<not executed>
